Fix z-index issue for glossary

--- a/themes/digital.gov/src/scss/new/guides/_guide-menu-bar.scss
+++ b/themes/digital.gov/src/scss/new/guides/_guide-menu-bar.scss
@@ -2,7 +2,6 @@
 
 .dg-guide__menu-bar {
   @include u-border-y("1px", "gray-cool-30", "solid");
-  @include u-z("top");
   align-items: center;
   background-color: color("gray-10");
   display: flex;
@@ -11,6 +10,7 @@
   position: sticky;
   top: -1px;
   white-space: nowrap;
+  z-index: 101;
 
   &-image-container {
     flex-shrink: 0;
